Fixed Form field width overfloww for mobile screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,6 +832,18 @@ svg {
   .services_card {
     padding-block: 1.5rem;;
   }
+
+  .contact_label {
+    font-size: 0.75rem;
+    white-space: normal;
+    word-break: break-word;
+  }
+
+  .contact_input {
+    width: 180px;
+    max-width: 100%;
+  }
+  
 }
 /* For medium devices */
 @media screen and (min-width: 576px){
